Task: Spring boot practice. Add Category model. Executor: Oleksii Bashkirov. (#10)
* Fixed security configuration and liquibase issue

* Fixed checkstyle errors

* - Removed the redundant Repository annotation in the RoleRepository interface.

* - Updated pom.xml file;
- Added annotations in SecurityConfig;
- Included userDetailsService in SecurityConfig;
- Removed EAGER fetch type for roles in User entity;
- Updated CustomUserDetailsService to use EntityNotFoundException;
- Implemented role assignment in UserServiceImpl during user registration.

* - Removed debug messages.

* 1. Updated SecurityConfig.java:
   - Removed the @EnableWebSecurity annotation.

2. Updated BookMapper.java:
   - Removed the @Component annotation.

3. Updated User.java:
   - Corrected @ManyToMany annotation formatting.

4. Updated CustomUserDetailsService.java:
   - Refactored the "loadUserByUsername" method.

5. Updated UserServiceImpl.java:
   - Replaced Collections.singleton with Set.of for setting user roles.

* feat: Implement JWT authentication

- Added `login(UserLoginRequestDto request)` method to `AuthenticationController`.
- Created `AuthenticationService`, `JwtAuthenticationFilter`, and `JwtUtil` classes.
- Made `/auth/login` endpoint publicly accessible.
- Configured `SecurityFilterChain` to use the new JWT filter.
- Implemented data validation for new DTO classes.

* Implement suggestions and improvements

- Removed empty lines in pom.xml;
- Removed JwtConfig.java;
- Simplified SecurityConfig.java by adjusting the security filter chain and configurations;
- Added constants for "BearerAuth" and "Bearer " in appropriate classes;
- Updated UserLoginResponseDto;
- Enhanced UserRepository with @EntityGraph for roles in findByEmail method;
- Replaced hardcoded "Authorization" header string with HttpHeaders.AUTHORIZATION constant;
- Ensured proper substring usage in JwtAuthenticationFilter.

* - Deleted unnecessary class `JwtConfig`;
