@@ -2,10 +2,10 @@ package mate.academy.service.impl;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import mate.academy.dto.BookDto;
-import mate.academy.dto.CreateBookRequestDto;
+import mate.academy.dto.book.BookDto;
+import mate.academy.dto.book.BookDtoWithoutCategoryIds;
+import mate.academy.dto.book.CreateBookRequestDto;
 import mate.academy.exception.EntityNotFoundException;
 import mate.academy.mapper.BookMapper;
 import mate.academy.model.Book;
@@ -13,6 +13,7 @@ import mate.academy.repository.BookRepository;
 import mate.academy.service.BookService;
 import mate.academy.specification.BookSpecificationProvider;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
@@ -26,34 +27,32 @@ public class BookServiceImpl implements BookService {
 
     @Override
     public BookDto save(CreateBookRequestDto requestDto) {
-        Book book = bookMapper.toModel(requestDto);
+        var book = bookMapper.toModel(requestDto);
         return bookMapper.toDto(bookRepository.save(book));
     }
 
     @Override
     public Page<BookDto> findAll(Pageable pageable) {
-        return bookRepository.findAll(pageable).map(bookMapper::toDto);
+        return bookRepository.findAll(pageable)
+                .map(bookMapper::toDto);
     }
 
     @Override
     public BookDto findById(Long id) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Book not found by id: " + id));
+        var book = getBook(id);
         return bookMapper.toDto(book);
     }
 
     @Override
     public BookDto update(Long id, CreateBookRequestDto requestDto) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Book not found by id: " + id));
+        var book = getBook(id);
         bookMapper.updateModel(book, requestDto);
         return bookMapper.toDto(bookRepository.save(book));
     }
 
     @Override
     public void deleteById(Long id) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Book not found by id: " + id));
+        var book = getBook(id);
         book.setDeleted(true);
         bookRepository.save(book);
     }
@@ -61,13 +60,27 @@ public class BookServiceImpl implements BookService {
     @Override
     public List<BookDto> searchBooks(Map<String, List<String>> searchParameters) {
         Specification<Book> specification = Specification.where(null);
-        for (Map.Entry<String, List<String>> entry : searchParameters.entrySet()) {
-            Specification<Book> sp = bookSpecificationProvider
-                    .getSpecification(entry.getValue(), entry.getKey());
+        for (var entry : searchParameters.entrySet()) {
+            var sp = bookSpecificationProvider.getSpecification(entry.getValue(), entry.getKey());
             specification = specification.and(sp);
         }
         return bookRepository.findAll(specification).stream()
                 .map(bookMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public Page<BookDtoWithoutCategoryIds> findAllByCategoryId(Long categoryId,
+            Pageable pageable) {
+        var bookPage = bookRepository.findAllByCategoriesId(categoryId, pageable);
+        var bookDtoList = bookPage.stream()
+                .map(bookMapper::toDtoWithoutCategories)
+                .toList();
+        return new PageImpl<>(bookDtoList, pageable, bookPage.getTotalElements());
+    }
+
+    private Book getBook(Long id) {
+        return bookRepository.findById(id).orElseThrow(
+                        () -> new EntityNotFoundException("Book not found by id: " + id));
     }
 }
